maCliAuthData-hbupd/maCliApi.h

//////////////////////////////////////////////////////////////////////////
//回调申明
typedef void *MACLIHANDLE;
//辅助
MACLIAPI int MACLI_STDCALL maCli_GetUuid(MACLIHANDLE p_hHandle, char *p_pszUuid, int p_iUuidSize);
MACLIAPI int MACLI_STDCALL maCli_RestorePsList(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_GetLastErrorCode(MACLIHANDLE p_hHandle, int *p_piErrorCode);
MACLIAPI int MACLI_STDCALL maCli_GetLastErrorMsg(MACLIHANDLE p_hHandle, char *p_pszErrorMsg, int p_iMsgSize);
MACLIAPI int MACLI_STDCALL maCli_ComEncrypt(MACLIHANDLE p_hHandle, char *p_pszOutput, int p_iSize, const char *p_pszInput, const char *p_pszKey);
MACLIAPI int MACLI_STDCALL maCli_ComDecrypt(MACLIHANDLE p_hHandle, char *p_pszOutput, int p_iSize, const char *p_pszInput, const char *p_pszKey);
MACLIAPI int MACLI_STDCALL maCli_GetConnIpAddr(MACLIHANDLE p_hHandle, char *p_pszIpAddr, int p_iIpAddrSize);
MACLIAPI int MACLI_STDCALL maCli_GetConnMac(MACLIHANDLE p_hHandle, char *p_pszMac, int p_iMacSize);