cos-c#demo/maCliApi4CSharp/maCliApi.cs


        //辅助
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetUuid")]
        public static extern int maCli_GetUuid(IntPtr Handle, IntPtr Uuid, int UuidSize);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_RestorePsList")]
        public static extern int maCli_RestorePsList(IntPtr Handle);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetLastErrorCode")]
        public static extern int maCli_GetLastErrorCode(IntPtr Handle, out int ErrorCode);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetLastErrorMsg")]
        public static extern int maCli_GetLastErrorMsg(IntPtr Handle, IntPtr ErrorMsg, int MsgSize);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_ComEncrypt")]
        public static extern int maCli_ComEncrypt(IntPtr Handle, IntPtr Output, int Size, string Input, string Key);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_ComDecrypt")]
        public static extern int maCli_ComDecrypt(IntPtr Handle, IntPtr Output, int Size, string Input, string Key);
        //增加IP和MAC获取
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetConnIpAddr")]
        public static extern int maCli_GetConnIpAddr(IntPtr Handle, IntPtr IpAddr, int Size);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetConnMac")]
        public static extern int maCli_GetConnMac(IntPtr Handle, IntPtr Mac, int Size);

    }
}
